--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <groupId>org.jenkins-ci.plugins</groupId>
-  <artifactId>cloudshell</artifactId>
-  <version>1.5</version>
+  <artifactId>testshell</artifactId>
+  <version>1.0</version>
   <packaging>hpi</packaging>
 
   <properties>
@@ -21,8 +21,8 @@
     <jenkins-test-harness.version>2.2</jenkins-test-harness.version>
   </properties>
 
-  <name>CloudShell Sandbox Plugin for Jenkins CI</name>
-  <description>CloudShell Sandbox Plugin for Jenkins CI</description>
+  <name>TestShell Scheduling Plugin for Jenkins CI</name>
+  <description>TestShell Scheduling Plugin for Jenkins CI</description>
   <url>http://www.quali.com</url>
 
   <licenses>
@@ -34,8 +34,8 @@
 
   <developers>
     <developer>
-      <name>Tomer Admon</name>
-      <email>tomer.a@quali.com</email>
+      <name>Aharon Shachar</name>
+      <email>ahron.s@quali.com</email>
       <organization>Quali</organization>
     </developer>
   </developers>
@@ -83,54 +83,6 @@
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-api</artifactId>
       <version>1.15</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-cps</artifactId>
-      <version>1.15</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-job</artifactId>
-      <version>1.15</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-durable-task-step</artifactId>
-      <version>1.15</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-support</artifactId>
-      <version>1.15</version>
-      <classifier>tests</classifier>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>javadoc</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>junit</artifactId>
-      <version>1.9</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.quali.cloudshell</groupId>
-      <artifactId>sandbox-api</artifactId>
-      <version>1.0.3</version>
     </dependency>
 
   </dependencies>
