--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <groupId>org.jenkins-ci.plugins</groupId>
-  <artifactId>testshell</artifactId>
-  <version>1.0</version>
+  <artifactId>testshell-snq</artifactId>
+  <version>1.1</version>
   <packaging>hpi</packaging>
 
   <properties>
